--- a/TheGreatAdventure.csproj
+++ b/TheGreatAdventure.csproj
@@ -46,13 +46,18 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Form1.cs">
+        <Compile Include="Animation.cs" />
+        <Compile Include="bin.cs" />
+        <Compile Include="CameraConfig.cs" />
+        <Compile Include="GameView.cs">
             <SubType>Form</SubType>
         </Compile>
-        <Compile Include="Form1.Designer.cs">
-            <DependentUpon>Form1.cs</DependentUpon>
+        <Compile Include="GameView.Designer.cs">
+            <DependentUpon>GameView.cs</DependentUpon>
         </Compile>
-        <Compile Include="Player.cs" />
+        <Compile Include="KeysPressing.Control.cs" />
+        <Compile Include="Map.Model.cs" />
+        <Compile Include="Player.Model.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <EmbeddedResource Include="Properties\Resources.resx">
