--- a/TheGreatAdventure.csproj
+++ b/TheGreatAdventure.csproj
@@ -60,6 +60,8 @@
         <Compile Include="Player.Model.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="SpawnMobs.cs" />
+        <Compile Include="Zombie.cs" />
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
             <LastGenOutput>Resources.Designer.cs</LastGenOutput>
